updated details about portfolio

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     Hi! I am Apoorv!!!
-    I am Studying Wth Neog.camp
+    I am Studying With Neog.camp
+
+    I am Working on some CLI applications. I will Showcase here tomorrow.
 </body>
 </html>
